# nodus-adk-agents

./: .gitignore  Dockerfile.dev  Dockerfile.pool  README.md  README_A2A.md  README_AGENT_POOL.md  pyproject.toml  start_agent_pool.sh  start_agents.sh
agents/root_agent/: __init__.py  agent.py
config/: agent_pool.json
src/nodus_adk_agents/: __init__.py  a2a_calculator_agent.py  a2a_client.py  a2a_currency_agent.py  a2a_email_agent.py  a2a_google_workspace_agent.py  a2a_hitl_math_agent.py  a2a_observability.py  a2a_observability.py.backup  a2a_observability_stub.py  a2a_parallel_demo.py  a2a_weather_agent.py  agent_pool_manager.py  calendar_agent.py  crm_agent.py  email_agent.py  erp_agent.py  google_workspace_agent.py  memory_agent.py  rag_agent.py  root_agent.py
tests/: __init__.py
