[project]
name = "nodus-adk-agents"
version = "0.1.0"
description = "Nodus ADK Agents - Agent definitions and domain logic"
authors = [
    { name = "Nodus Factory", email = "dev@nodus-factory.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk @ git+https://github.com/nodus-factory/adk-python.git@nodus-main",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true


